--- a/content/public/app/BUILD.gn
+++ b/content/public/app/BUILD.gn
@@ -21,6 +21,7 @@
 #       //content/public/app:both_sources (source set)
 
 import("//build/config/chrome_build.gni")
+import("//mojo/public/mojo_application_manifest.gni")
 
 public_app_shared_sources = [
   "content_jni_onload.h",
@@ -139,4 +140,16 @@ if (is_component_build) {
       ]
     }
   }
+}
+
+mojo_application_manifest("browser_manifest") {
+  type = "exe"
+  application_name = "content_browser"
+  source = "mojo/content_browser_manifest.json"
+}
+
+mojo_application_manifest("renderer_manifest") {
+  type = "exe"
+  application_name = "content_renderer"
+  source = "mojo/content_renderer_manifest.json"
 }
