--- a/components/metrics/BUILD.gn
+++ b/components/metrics/BUILD.gn
@@ -20,6 +20,8 @@ source_set("metrics") {
     "cloned_install_detector.h",
     "daily_event.cc",
     "daily_event.h",
+    "data_use_tracker.cc",
+    "data_use_tracker.h",
     "drive_metrics_provider.cc",
     "drive_metrics_provider.h",
     "drive_metrics_provider_android.cc",
@@ -312,6 +314,7 @@ source_set("unit_tests") {
     "call_stack_profile_metrics_provider_unittest.cc",
     "cloned_install_detector_unittest.cc",
     "daily_event_unittest.cc",
+    "data_use_tracker_unittest.cc",
     "drive_metrics_provider_unittest.cc",
     "histogram_encoder_unittest.cc",
     "machine_id_provider_win_unittest.cc",
