--- a/components/leveldb/BUILD.gn
+++ b/components/leveldb/BUILD.gn
@@ -16,12 +16,11 @@ source_set("lib") {
     "leveldb_mojo_proxy.h",
     "leveldb_service_impl.cc",
     "leveldb_service_impl.h",
-    "util.cc",
-    "util.h",
   ]
 
   deps = [
     "//components/filesystem/public/interfaces",
+    "//components/leveldb/public/cpp",
     "//components/leveldb/public/interfaces",
     "//mojo/common",
     "//mojo/message_pump",
@@ -62,11 +61,13 @@ mojo_application_manifest("manifest") {
 test("leveldb_service_unittests") {
   sources = [
     "leveldb_service_unittest.cc",
+    "remote_iterator_unittest.cc",
   ]
 
   deps = [
     "//base",
     "//components/filesystem/public/interfaces",
+    "//components/leveldb/public/cpp",
     "//components/leveldb/public/interfaces",
     "//mojo/common",
     "//mojo/platform_handle",
@@ -74,6 +75,7 @@ test("leveldb_service_unittests") {
     "//mojo/shell/public/cpp:shell_test_support",
     "//mojo/shell/public/cpp:sources",
     "//mojo/shell/public/cpp/test:run_all_shelltests",
+    "//third_party/leveldatabase",
   ]
 
   data_deps = [
