Move DisplayLayout and DisplayLayoutBuilder From ash To ui/display
BUG=595498

Review URL: https://codereview.chromium.org/1838833002

Cr-Commit-Position: refs/heads/master@{#385875}

--- a/ui/display/BUILD.gn
+++ b/ui/display/BUILD.gn
@@ -37,6 +37,10 @@ component("display") {
     "display_export.h",
     "display_switches.cc",
     "display_switches.h",
+    "manager/display_layout.cc",
+    "manager/display_layout.h",
+    "manager/display_layout_builder.cc",
+    "manager/display_layout_builder.h",
     "win/display_info.cc",
     "win/display_info.h",
     "win/screen_win.cc",
@@ -146,6 +150,7 @@ test("display_unittests") {
     "chromeos/update_display_configuration_task_unittest.cc",
     "chromeos/x11/display_util_x11_unittest.cc",
     "chromeos/x11/native_display_event_dispatcher_x11_unittest.cc",
+    "manager/display_layout_builder_unittest.cc",
     "util/display_util_unittest.cc",
     "util/edid_parser_unittest.cc",
     "win/screen_win_unittest.cc",
