arc: Add initial drop of ARC Bluetooth implementation
The initial implementation has support for adapter enable/disable, and
basic scanning.

R=elijahtaylor@chromium.org, lhchavez@chromium.org, mcchou@chromium.org, puthik@chromium.org, rickyz@chromium.org, scheib@chromium.org
BUG=b:26275232

Review URL: https://codereview.chromium.org/1785023002

Cr-Commit-Position: refs/heads/master@{#385956}

--- a/components/arc/BUILD.gn
+++ b/components/arc/BUILD.gn
@@ -19,6 +19,10 @@ static_library("arc") {
     "arc_service_manager.h",
     "audio/arc_audio_bridge.cc",
     "audio/arc_audio_bridge.h",
+    "bluetooth/arc_bluetooth_bridge.cc",
+    "bluetooth/arc_bluetooth_bridge.h",
+    "bluetooth/bluetooth_type_converters.cc",
+    "bluetooth/bluetooth_type_converters.h",
     "clipboard/arc_clipboard_bridge.cc",
     "clipboard/arc_clipboard_bridge.h",
     "crash_collector/arc_crash_collector_bridge.cc",
@@ -53,6 +57,7 @@ static_library("arc") {
     "//components/onc",
     "//components/prefs",
     "//components/signin/core/account_id",
+    "//device/bluetooth",
     "//google_apis",
     "//ipc:ipc",
     "//ipc/mojo:mojo",
@@ -79,6 +84,7 @@ mojom("arc_bindings") {
     "common/arc_bridge.mojom",
     "common/audio.mojom",
     "common/auth.mojom",
+    "common/bluetooth.mojom",
     "common/clipboard.mojom",
     "common/crash_collector.mojom",
     "common/ime.mojom",
