ozone: build GpuMemoryBuffer unittests
BUG=475633
CQ_INCLUDE_TRYBOTS=tryserver.chromium.linux:linux_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel;tryserver.chromium.win:win_optional_gpu_tests_rel

Review URL: https://codereview.chromium.org/1869713002

Cr-Commit-Position: refs/heads/master@{#386013}

--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -852,6 +852,10 @@ test("content_unittests") {
   }
 
   if (use_ozone) {
+    sources +=
+        rebase_path(content_tests_gypi_values.content_unittests_ozone_sources,
+                    ".",
+                    "//content")
     deps += [ "//ui/ozone" ]
   } else {
     sources -=
