--- a/components/ssl_errors/BUILD.gn
+++ b/components/ssl_errors/BUILD.gn
@@ -2,7 +2,7 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-# GYP version: components/ssl_errors.gyp
+# GYP version: components/ssl_errors.gypi
 source_set("ssl_errors") {
   sources = [
     "error_classification.cc",
