Add a one-time notice about other forms of browsing history.
Design doc:
https://docs.google.com/document/d/1ZMDSAd44KmzKhqXPjobZOf9rZezs6VqiBnqpDD0auCU/

Mocks:
https://docs.google.com/presentation/d/1rpR3xB3aYFzXD0U--piuMq3y4XAmoYdawA2HC1cuEjM/

When the user deletes their browsing history in ClearBrowsingDataPreferences,
we might show them a dialog about other forms of browsing history. The dialog
is only shown once per profile (the shown state is stored in SharedPreferences)
and is only shown to users for which the web history service finds that it
is relevant. The web history service will have to make an asynchronous
request to find this out, and will inform us by calling
enableDialogAboutOtherFormsOfBrowsingHistory().

The web history service request and asynchronous callback is to be done
in a follow-up CL.

BUG=595332

Review URL: https://codereview.chromium.org/1859373002

Cr-Commit-Position: refs/heads/master@{#386050}

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -650,6 +650,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/preferences/privacy/CrashDumpUploadPreference.java",
   "java/src/org/chromium/chrome/browser/preferences/privacy/CrashReportingPermissionManager.java",
   "java/src/org/chromium/chrome/browser/preferences/privacy/DoNotTrackPreference.java",
+  "java/src/org/chromium/chrome/browser/preferences/privacy/OtherFormsOfHistoryDialogFragment.java",
   "java/src/org/chromium/chrome/browser/preferences/privacy/PhysicalWebPreferenceFragment.java",
   "java/src/org/chromium/chrome/browser/preferences/privacy/PrivacyPreferences.java",
   "java/src/org/chromium/chrome/browser/preferences/privacy/PrivacyPreferencesManager.java",
