--- a/android_webview/native/BUILD.gn
+++ b/android_webview/native/BUILD.gn
@@ -61,6 +61,8 @@ source_set("native") {
     "aw_dev_tools_server.h",
     "aw_form_database.cc",
     "aw_form_database.h",
+    "aw_gl_functor.cc",
+    "aw_gl_functor.h",
     "aw_http_auth_handler.cc",
     "aw_http_auth_handler.h",
     "aw_locale_manager_impl.cc",
@@ -134,6 +136,7 @@ generate_jni("native_jni") {
     "../java/src/org/chromium/android_webview/AwDebug.java",
     "../java/src/org/chromium/android_webview/AwDevToolsServer.java",
     "../java/src/org/chromium/android_webview/AwFormDatabase.java",
+    "../java/src/org/chromium/android_webview/AwGLFunctor.java",
     "../java/src/org/chromium/android_webview/AwHttpAuthHandler.java",
     "../java/src/org/chromium/android_webview/AwMessagePortService.java",
     "../java/src/org/chromium/android_webview/AwMetricsServiceClient.java",
