--- a/components/cronet/android/api/build.xml
+++ b/components/cronet/android/api/build.xml
@@ -2,8 +2,13 @@
   <target name="doc" description="generate documentation">
       <javadoc destdir="${doc.dir}"
                overview="${overview}"
+               windowtitle="Cronet API"
+               nohelp="yes"
+               notree="yes"
+               nodeprecated="yes"
+               linkoffline="https://developer.android.com/reference ."
                bootclasspath="../../../../third_party/android_tools/sdk/platforms/android-23/android.jar:../../../../third_party/android_tools/sdk/extras/android/support/annotations/android-support-annotations.jar:${lib.java.dir}/cronet_javadoc_classpath.jar"
-               docletpath="../../../../buildtools/android/doclava/jsilver.jar:../../../../buildtools/android/doclava/doclava.jar"
+               use="true"
                >
         <fileset dir="${source.dir}" defaultexcludes="yes">
           <include name="**/*.java"/>
@@ -11,18 +16,7 @@
           <exclude name="**/Chromium*.java"/>
           <exclude name="**/ChunkedWritableByteChannel*.java"/>
           <exclude name="**/HttpUrl*.java"/>
-          <exclude name="**/ResponseTooLargeException.java"/>
-          <exclude name="**/UrlRequestContextConfig.java"/>
-          <exclude name="**/UserAgent.java"/>
         </fileset>
-        <doclet name="com.google.doclava.Doclava">
-          <param name="-title" /><param name="Cronet API"/>
-          <!-- federation -->
-          <param name="-federate" /><param name="Android"/>
-          <param name="https://developer.android.com/"/>
-          <param name="-federationapi"/><param name="Android"/>
-          <param name="../../../../buildtools/android/doclava/current.txt"/>
-        </doclet>
       </javadoc>
   </target>
 </project>
